--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,5 +5,5 @@ services:
     ports:
     - "8081-8086:8080"
     volumes:
-    - "/mnt/wars:/usr/local/tomcat/webapps"  
+    - " /home/ec2-user/wars:/usr/local/tomcat/webapps"  
 
